# FlagDojo

./: .env.example  .gitignore  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  run.py
.claude/: environment-notes.md
app/: __init__.py  base_challenge.py  config.py  extensions.py  models.py
app/core/: admin.py  auth.py  routes.py
app/templates/: base.html  challenge.html  dashboard.html  index.html  leaderboard.html
app/templates/auth/: login.html  register.html
challenges/csrf-attack/: challenge.py
challenges/csrf-attack/templates/: bank.html  csrf_attack_demo.html
challenges/path-traversal/: challenge.py
challenges/path-traversal/documents/: about.txt  help.txt  welcome.txt
challenges/path-traversal/templates/: fileviewer.html
challenges/sqli-basic/: challenge.py
challenges/sqli-basic/templates/: login.html
challenges/xss-reflected/: challenge.py
challenges/xss-reflected/templates/: search.html
challenges/xss-stored/: challenge.py
challenges/xss-stored/templates/: comments.html
docker/: Dockerfile  docker-compose.yml
scripts/: add_challenge.py  init_db.py  reset_progress.py
